--- a/crypto_market_cap_flutter/pubspec.yaml
+++ b/crypto_market_cap_flutter/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get_it: ^7.2.0
+  provider: ^6.0.5
+  http: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +61,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
